# d3j

./: .gitignore  Cargo.toml  README.md  justfile
.cargo/: mutants.toml
.github/workflows/: ci.yml  compare.yml  dotslash-config.json  release.yml
.quire/: config.fnl
compare/: README.md  generate.sh
compare/assets/: style.css
compare/scenarios/java-insert-insert/: base.java  left.java  notes.md  right.java
compare/scenarios/java-switch-to-if/: base.java  left.java  notes.md  right.java
compare/scenarios/json-independent-keys/: notes.md
compare/scenarios/json-sequence/: left.json  notes.md  right.json
compare/scenarios/rust-independent-methods/: base.rs  left.rs  notes.md  right.rs
compare/scenarios/rust-relabel-relabel/: base.rs  left.rs  notes.md  right.rs
docs/notes/: 2026-07-14-mergiraf-comparison.md  2026-07-15-comment-nodes.md
docs/plans/: 2026-07-10-d3j-design.md  2026-07-10-d3j-implementation.md  2026-07-23-comparison-site-design.md
src/: check.rs  diff.rs  error.rs  hash.rs  lang.rs  lib.rs  merge.rs  rules.rs  synth.rs  tree.rs  zs.rs
tests/: cli.rs  corpus.rs  property.rs
tests/corpus/scenarios/attribute-splice/: A.rs  B.rs  O.rs
tests/corpus/scenarios/comment-delete-edit/: B.rs  O.rs
tests/corpus/scenarios/comment-edit/: A.rs  B.rs  O.rs  expected.rs
tests/corpus/scenarios/comment-edit-conflict/: A.rs  B.rs  O.rs  expected.CONFLICT
tests/corpus/scenarios/comment-edit-java/: A.java  B.java  O.java  expected.java
tests/corpus/scenarios/comment-insert-conflict/: expected.CONFLICT
tests/corpus/seeds/: basic.rs  config.json
(+48 files in other folders)
