[package]
name = "d3j"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "d3j"
path = "src/bin/d3j/main.rs"

[dependencies]
clap = { version = "*", features = ["derive", "env"] }
clap_complete = "*"
fs-err = "*"
miette = { version = "*", features = ["fancy"] }
serde = { version = "*", features = ["derive"] }
serde_json = "*"
thiserror = "*"
tracing = "*"
tracing-subscriber = { version = "*", features = ["env-filter"] }
tree-sitter = "*"
tree-sitter-java = "*"
tree-sitter-json = "*"
tree-sitter-rust = "*"

[dev-dependencies]
assert_cmd = "*"
hegeltest = "*"
predicates = "*"
tempfile = "*"

[lints.clippy]
self_named_module_files = "warn"
unwrap_used = "warn"
expect_used = "warn"
panic = "warn"
indexing_slicing = "warn"
arithmetic_side_effects = "warn"
